--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* Styles for the main page. Students, unless you're done early and feel like changing the 
+look of your project, you shouldn't be here -- check out src/filters/ ! */
+
 body {
   background-color: #f3f3ff;
   color: #17171b;
